feat(GetStocks): get other fields besides id